--- a/main.css
+++ b/main.css
@@ -11,9 +11,10 @@ body
 
 #header
 {
-    padding: 0px 0px 450px 0px; color: white;
+    padding: 0px 0px 170px 0px; 
+    color: white;
 }
-
+ 
 #location
 {
     display: block;
@@ -42,6 +43,12 @@ body
     margin-left: 850px;
     margin-top: -170px;
     width: 550px;
+    font-size: 16px;
+}
+
+#aboutNamibia
+{
+    padding: 50px 60px 50px 80px; text-align: center;
 }
 
 #aboutNamibia p
@@ -55,32 +62,67 @@ body
 {
     #header
     {
-        padding: 0px 0px 830px 0px;
-        background-image: url(erik-n1VbsCPevyk-unsplash\ copy.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
+        padding-bottom: 180px;
     }
 
-    #location,#climate,#temperature,#aboutNamibia,#headerImg,#description
+    #headerImg
     {
         display: none;
+    }
+
+    #location
+    {
+        width: 160px;
+        margin-left: 10px;
+    }
+
+    #climate
+    {
+        margin-top: -95px;
+        margin-left: 170px;
+    }
+
+    #temperature
+    {
+        margin-left: 270px;
+    }
+
+    #description
+    {
+        margin-left: 20px;
+        margin-top: -280px;
+        width: 390px;
+        font-size: 13px;
+    }
+
+    #aboutNamibia p
+    {
+        width: 350px;
+        margin-left: -50px;
+        font-size: 14px;
+    }
+
+    #aboutNamibia
+    {
+        padding-top: 120px;
+    }
+
+    #aboutNamibia h4
+    {
+        white-space: nowrap;
     }
 }
 
 @media only screen and (min-width:700px) 
 {
-    #location,#climate,#temperature
+    #headerImgPhone
     {
         display: none;
     }
-    
-    #description
+
+    #climate
     {
-        margin-top: -130px;
-        margin-left: 40px;
-        width: 700px;
-        height: 100px;
+        margin-left: 320px;
     }
 }
 
