--- a/main.css
+++ b/main.css
@@ -64,6 +64,7 @@ swiper-container
     width: 100%;
     padding-top: 50px;
     padding-bottom: 50px;
+    background-color: black;
 }
 
 swiper-slide
