--- a/main.css
+++ b/main.css
@@ -97,6 +97,11 @@ swiper-slide img
         display: none;
     }
 
+    #headerImgPhone
+    {
+        object-fit: cover;
+    }
+
     #location
     {
         max-width: 160px;
@@ -137,6 +142,12 @@ swiper-slide img
     #aboutNamibia h4
     {
         white-space: nowrap;
+    }
+
+    swiper-slide
+    {
+        max-width: 300px;
+        max-height: 300px;
     }
 }
 
